# mcp-gsheets

./: .dockerignore  .env.example  .gitignore  Dockerfile  LICENSE  NEXT_STEPS.md  PROJECT_SUMMARY.md  README.md  SETUP.md  TODO.md  TOOLS_REFERENCE.md  alembic.ini  docker-compose.yml  fastmcp.json  launcher.sh  pyproject.toml
.claude/commands/: unittest.md
alembic/: env.py
alembic/versions/: 001_initial_tables.py
src/mcp_gsheets/: __init__.py  auth.py  db.py  exceptions.py  http_server.py  models.py  server.py  webapp.py
static/: style.css
templates/: dashboard.html  index.html
tools/jenkins/: mainline.groovy
tools/scripts/: build-and-push-docker-image.sh  deploy.sh
tools/terragrunt/: terragrunt.hcl
tools/terragrunt/mcp-gsheets/: component.hcl
tools/terragrunt/mcp-gsheets/test/: account.hcl  env.hcl
tools/terragrunt/mcp-gsheets/test/eu-north-1/: region.hcl
tools/terragrunt/mcp-gsheets/test/eu-north-1/ecs-service/: terragrunt.hcl
tools/terragrunt/mcp-gsheets/test/eu-north-1/rds-instance/: terragrunt.hcl
