[project]
name = "mcp-gsheets"
version = "0.1.0"
description = "Comprehensive MCP server for Google Sheets API - covering the v4 API including charts, formatting, pivot tables, and more"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastmcp>=0.1.0",
    "google-auth>=2.28.1",
    "google-auth-oauthlib>=1.2.0",
    "google-api-python-client>=2.117.0",
    "fastapi>=0.104.0",
    "uvicorn>=0.24.0",
    "httpx>=0.24.0",
]

[[project.authors]]
name = "Erik Möller"
email = "emoller@opera.com"

[project.urls]
"Homepage" = "https://github.com/opera-emoller/mcp-gsheets"
"Bug Tracker" = "https://github.com/opera-emoller/mcp-gsheets/issues"
"Repository" = "https://github.com/opera-emoller/mcp-gsheets.git"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.scripts]
mcp-gsheets = "mcp_gsheets.server:main"

[tool.hatch.build.targets.wheel]
packages = ["src/mcp_gsheets"]
